--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <div class="container">
-      <p>QR Code Oluşturucu</p>
-      <input type="text" placeholder="Metin veya URL" id="qrText" />
+      <p>QR Code Generator</p>
+      <input type="text" placeholder="Enter Text or URL" id="qrText" />
       <div id="imgBox">
         <img src="" id="qrImage" />
       </div>
-      <button onclick="generateQR()">QR Kod Oluştur</button>
+      <button onclick="generateQR()">Generate</button>
     </div>
     //----------
     <script>
